# temporaryerp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  helpmyself.md  start-server.bat
config/: bi_schema.php  database.php  logging.php
controllers/: APController.php  ARController.php  AccountingController.php  AnalyticsController.php  ApprovalController.php  AuditLogController.php  AuthController.php  BIController.php  CashflowController.php  CompanyBankController.php  CostSheetController.php  CustomerController.php  DashboardController.php  DealController.php  DocsController.php  ExchangeRateController.php  ExpenseController.php  HRController.php  InventoryController.php  KintaiController.php  MRPController.php  MasterController.php  PDFController.php  PayrollController.php  PermissionController.php  ProductionController.php  ProjectController.php  PurchaseOrderController.php  PurchaseRequestController.php  QuotationController.php  ReportController.php  SalesCustomerController.php  SalesKpiController.php  SalesOrderController.php  SupplierController.php  UserController.php
core/: ApprovalFlow.php  Auth.php  Controller.php  Database.php  Env.php  Form.php  Helpers.php  Logger.php  Model.php  Router.php
database/: add_company_bank_accounts.sql  add_payment_term_50_40_10.sql  create_mcp_role.sql  (+46 more)
mcp-server/: .env.example  README.md  pyproject.toml  requirements.txt  smoke_test.py
mcp-server/src/pegasus_mcp/: __init__.py  db.py  server.py
mcp-server/src/pegasus_mcp/tools/: __init__.py  customers.py  kpi.py  ops.py  quotations.py
(+185 files in other folders)
